Changes with mod_fastcgi 2.2.3

 *) Fix dynamic server "Connection Refused" handling.

 *) Fix demand-based dynamic process spawing (uses a more portable approach).

 *) Add -idle-timeout arg to FastCgiServer, FastCgiExternalServer, and 
    FastCgiConfig.  mod_fastcgi will now abort a connection if inactive for
	longer than this period.  It applies to the initiation of connections as 
	well (and thus is similar to appConnTimeout).  Default is 30 seconds.

 *) appConnTimeout is 0 by default now resulting in blocking connect()s.  This
    is more platform portable/predicable.

 *) Leave STDOUT and STDERR open to the main server error_log.  This should
    eliminate a pile of protocol errors and having to track down 3rd party
    libs writing to stderr inadvertantly.  This doesn't mean these shouldn't
    be fixed in the application to use the FastCGI I/O, it just allows these
    applications to run when previously they'd crash and burn.

 *) Add the pass-header arg to server directives.

 *) Allow supplementary groups to be passed to spawned FastCGI applications (as
    is done for CGI) - at least until PR2580 is resolved.

 *) Initialize the default (empty) environment in a more socially acceptable
    way.

 *) Miscellaneous doc improvements based on notes I've collected up over the
    last few months.

 *) Fix a bug in the stderr handling introduced in 2.2.2.  There were conditions
    that resulted in not or improperly terminated strings.

 *) Fix the call to setsockopt() to disable Nagle.  [based on a bug report by
    Johannes Plassmann <johannes.plassmann@pdb.siemens.de>]

Changes with mod_fastcgi 2.2.2

 *) Added support for blocking connect()s by setting appConnTimeout to 0.
    Non-blocking connect()s (the default) can be troublesome on some platforms.
    Its expected that blocking connect()s will become the default (and
    non-blocking connect()s will become optional) in the next release.
